--- a/index.html
+++ b/index.html
@@ -80,13 +80,85 @@
     <section class="destination-section">
         <div class="destination-text">
             <h1>Choose Your Destination</h1>
-            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+            <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec
+                nibh pellentesque.</p>
         </div>
 
         <div class="destination-images">
+            <div class="first-destination-img-row">
+                <img src="Images/Rectangle 5.png" alt="Maldives">
+                <div class="maldives">
+                    <h2>Maldives</h2>
+                </div>
+                <img src="Images/Rectangle 8.png" alt="Indonesia">
+                <div class="indonesia">
+                    <h2>Indonesia</h2>
+                </div>
+            </div>
 
+            <div class="second-destination-img-row">
+                <img src="Images/Rectangle 6.png" alt="Srilanka">
+                <div class="srilanka">
+                    <h2>Srilanka</h2>
+                </div>
+                <img src="Images/Rectangle 7.png" alt="North America">
+                <div class="north-america">
+                    <h2>North America</h2>
+                </div>
+                <img src="Images/Rectangle 9.png" alt="Kashmir">
+                <div class="kashmir">
+                    <h2>Kashmir</h2>
+                </div>
+            </div>
+
+            <div class="third-destination-img-row">
+                <img src="Images/Rectangle 11.png" alt="Bangladesh">
+                <div class="bangladesh">
+                    <h2>Bangladesh</h2>
+                </div>
+                <img src="Images/Rectangle 10.png" alt="Bandarban">
+                <div class="bandarban">
+                    <h2>Bandarban</h2>
+                </div>
+            </div>
         </div>
     </section>
+
+    <!-- Why choose us section -->
+
+    <section class="why-choose-us-section">
+        <div class="why-choose-us-content">
+            <div class="why-choose-us-text">
+                <h1>Why Choose Us</h1>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec
+                    nibh pellentesque.</p>
+            </div>
+        </div>
+
+        <div class="why-choose-us-card-container">
+            <div class="first-row-card-content">
+                <div class="card card-1">
+                    <img src="Icons/hotel 1.png" alt="">
+                    <h3>Handpicked Hotels</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+
+                <div class="card card-2">
+                    <img src="Icons/map 1.png" alt="">
+                    <h3>World Class Service</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+
+            <div class="card card-3">
+                <img src="Icons/price-tag 1.png" alt="">
+                    <h3>Best Price Guarantee</h3>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
