--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         <div class="why-choose-us-content">
             <div class="why-choose-us-text">
                 <h1>Why Choose Us</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst
+                    nec
                     nibh pellentesque.</p>
             </div>
         </div>
@@ -140,23 +141,73 @@
                 <div class="card card-1">
                     <img src="Icons/hotel 1.png" alt="">
                     <h3>Handpicked Hotels</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                 </div>
 
                 <div class="card card-2">
                     <img src="Icons/map 1.png" alt="">
                     <h3>World Class Service</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                        sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
                 </div>
             </div>
 
             <div class="card card-3">
                 <img src="Icons/price-tag 1.png" alt="">
-                    <h3>Best Price Guarantee</h3>
-                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                <h3>Best Price Guarantee</h3>
+                <p>Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et. Libero commodo
+                    sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
             </div>
         </div>
     </section>
+
+    <!-- news letter section -->
+
+    <section class="newsletter-section">
+        <div class="newsletter-content">
+            <h3>Newsletter</h3>
+            <p>Get your daily dose of travel news & tips. Sign up today!</p>
+            <hr>
+            <input type="text" name="" id="">
+            <input type="text" name="" id="">
+            <button> Subscribe </button>
+        </div>
+
+        <div class="savings-content">
+            <img src="Images/Rectangle12.png" alt="">
+        </div>
+
+        <div class="savings-card">
+            <div class="savings-card-content">
+                <p>Travel.com</p>
+                <h2>Save up to 70%</h2>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer section start from here -->
+    <footer class="footer-section">
+        <div class="footer-content">
+            <div class="footer-logo"><img src="Images/logo.png" alt="">
+                <h2>Travel<span class="span-station">Station</span>
+            </div>
+            <div class="footer-description">
+                <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate.
+                    Leo erat maecenas vitae elementum ultricies nullam. </p>
+            </div>
+
+            <div class="footer-icons">
+                <img src="Icons/Social.png" alt="">
+            </div>
+        </div>
+
+        
+
+        <hr class="footer-hr">
+
+        <p class="footer-reserved">2017, All Rights Reserved.</p>
+    </footer>
 
 
 </body>
