--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Travel Station</title>
 
     <link rel="stylesheet" href="styles/style.css">
-
+    <link rel="stylesheet" href="styles/responsive.css">
 
 </head>
 
@@ -27,12 +27,13 @@
                 <a href="" src="#">Testimonial</a>
                 <a href="" src="#">Blog</a>
                 <a href="" src="#">Contact</a>
+                <img class="nav-menu hide" src="Icons/Frame.png" alt="">
             </div>
 
         </nav>
 
         <!-- banner section start from here -->
-        <section class="banner-section">
+        <section class="banner-section ">
             <div class="banner-container">
                 <h1>Explore Your Travel</h1>
                 <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac
@@ -77,7 +78,7 @@
     </section>
 
     <!-- choose your destination section -->
-    <section class="destination-section">
+    <section class="destination-section hide">
         <div class="destination-text">
             <h1>Choose Your Destination</h1>
             <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec
@@ -126,7 +127,7 @@
 
     <!-- Why choose us section -->
 
-    <section class="why-choose-us-section">
+    <section class="why-choose-us-section hide">
         <div class="why-choose-us-content">
             <div class="why-choose-us-text">
                 <h1>Why Choose Us</h1>
@@ -165,7 +166,7 @@
     <!-- news letter section -->
 
     <section class="newsletter-section">
-        <div class="newsletter-content">
+        <div class="newsletter-content hide">
             <h3>Newsletter</h3>
             <p>Get your daily dose of travel news & tips. Sign up today!</p>
             <hr>
@@ -174,11 +175,11 @@
             <button> Subscribe </button>
         </div>
 
-        <div class="savings-content">
+        <div class="savings-content hide">
             <img src="Images/Rectangle12.png" alt="">
         </div>
 
-        <div class="savings-card">
+        <div class="savings-card hide">
             <div class="savings-card-content">
                 <p>Travel.com</p>
                 <h2>Save up to 70%</h2>
@@ -187,7 +188,7 @@
     </section>
 
     <!-- footer section start from here -->
-    <footer class="footer-section">
+    <footer class="footer-section hide">
         <div class="footer-content">
             <div class="footer-logo"><img src="Images/logo.png" alt="">
                 <h2>Travel<span class="span-station">Station</span>
