--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </section>
 
     <!-- choose your destination section -->
-    <section class="destination-section hide">
+    <section class="destination-section">
         <div class="destination-text">
             <h1>Choose Your Destination</h1>
             <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec
@@ -127,7 +127,7 @@
 
     <!-- Why choose us section -->
 
-    <section class="why-choose-us-section hide">
+    <section class="why-choose-us-section">
         <div class="why-choose-us-content">
             <div class="why-choose-us-text">
                 <h1>Why Choose Us</h1>
@@ -166,7 +166,7 @@
     <!-- news letter section -->
 
     <section class="newsletter-section">
-        <div class="newsletter-content hide">
+        <div class="newsletter-content">
             <h3>Newsletter</h3>
             <p>Get your daily dose of travel news & tips. Sign up today!</p>
             <hr>
@@ -175,11 +175,11 @@
             <button> Subscribe </button>
         </div>
 
-        <div class="savings-content hide">
+        <div class="savings-content">
             <img src="Images/Rectangle12.png" alt="">
         </div>
 
-        <div class="savings-card hide">
+        <div class="savings-card">
             <div class="savings-card-content">
                 <p>Travel.com</p>
                 <h2>Save up to 70%</h2>
