--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/responsive.css">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 </head>
 
@@ -57,9 +57,9 @@
                             <option value="volvo">Luxury</option>
                           </select>
                         <button class="btn-primary">Find Now</button>
-                        <!-- <div>
-                            <i class="fa-light fa-magnifying-glass"></i>
-                        </div> -->
+                        <div class="fa-solid">
+                            <i class="fa-solid  fa-magnifying-glass"></i>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -172,6 +172,30 @@
         </div>
     </section>
 
+    <!-- premium packages section -->
+
+    <!-- <section class="premium-section">
+        <div class="premium-content">
+            <h1>Our <span class="span-station">Premium</span> Packages</h1>
+            <p>In a world where travel is not merely a journey but an exquisite experience, premium packages offered by <span class="span-station">"Travel Station"</span> like Wanderlust Escapes redefine the meaning of luxury and sophistication.</p>
+        </div>
+
+        <div class="package-img-container">
+            <div class="package-card">
+                <img src="Images/solo.png" alt="">
+            </div>
+            <div class="package-card">
+                <img src="Images/group.png" alt="">
+            </div>
+            <div class="package-card">
+                <img src="Images/couple.jpg" alt="">
+            </div>
+            <div class="package-card">
+                <img src="Images/family.png" alt="">
+            </div>
+        </div>
+    </section> -->
+
     <!-- news letter section -->
 
     <section class="newsletter-section">
@@ -219,6 +243,7 @@
         <p class="footer-reserved">2017, All Rights Reserved.</p>
     </footer>
 
+    
     
 
 
