adjusted styles in choose us section

--- a/index.html
+++ b/index.html
@@ -288,8 +288,7 @@
                 <h2>Travel<span class="span-station">Station</span>
             </div>
             <div class="footer-description">
-                <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate.
-                    Leo erat maecenas vitae elementum ultricies nullam. </p>
+                <p>Start planning your next getaway with <span class="span-station">TravelStation</span> today and embark on a journey that will leave you with memories to last a lifetime. </p>
             </div>
 
             <div class="footer-icons">
@@ -301,7 +300,7 @@
 
         <hr class="footer-hr">
 
-        <p class="footer-reserved">2017, All Rights Reserved.</p>
+        <p class="footer-reserved">&copy; 2024, All Rights Reserved.</p>
     </footer>
 
 
