added deal section

--- a/index.html
+++ b/index.html
@@ -183,6 +183,77 @@
         </div>
     </section>
 
+
+    <!-- deals and discount section -->
+
+    <section class="deal-section">
+        <div class="deal-content">
+            <h1>Deals & Discount</h1>
+            <p>We are providing special deals and discount on special occassion and seasons</p>
+        </div>
+
+        <div class="deal-card-container">
+            <div class="deal-card-content">
+                <div class="deal-card deal-card-1">
+                    <div class="deal-card-icon">
+                        <ul>
+                            <li>7 Day / 6 Night</li>
+                            <li>Max : 10</li>
+                            <li>Malaysia</li>
+                        </ul>
+                    </div>
+                    <h3>Tour To Indonesia</h3>
+                    <p>Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h4>Price: $1300-$1500</h4>
+                    <button class="btn-primary">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+        <div class="deal-card-container">
+            <div class="deal-card-content-2">
+                <div class="deal-card deal-card-2">
+                    <div class="deal-card-icon">
+                        <ul>
+                            <li>7 Day / 6 Night</li>
+                            <li>Max : 10</li>
+                            <li>Malaysia</li>
+                        </ul>
+                    </div>
+                    <h3>Tour To Bangkok</h3>
+                    <p>Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h4>Price: $1300-$1500</h4>
+                    <button class="btn-primary">Book Now</button>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="deal-card-container">
+            <div class="deal-card-content">
+                <div class="deal-card deal-card-1">
+                    <div class="deal-card-icon">
+                        <ul>
+                            <li>7 Day / 6 Night</li>
+                            <li>Max : 10</li>
+                            <li>Malaysia</li>
+                        </ul>
+                    </div>
+                    <h3>Tour To Thailand</h3>
+                    <p>Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h4>Price: $1300-$1500</h4>
+                    <button class="btn-primary">Book Now</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- premium packages section -->
 
     <section class="premium-section">
@@ -267,11 +338,11 @@
                 <input type="email" placeholder="Enter you email" class="input-placeholder">
                 <button> Subscribe </button>
             </div>
-    
+
             <div class="savings-content">
                 <img src="Images/Rectangle12.png" alt="">
             </div>
-    
+
             <div class="savings-card">
                 <div class="savings-card-content">
                     <p>Travel.com</p>
@@ -288,7 +359,8 @@
                 <h2>Travel<span class="span-station">Station</span>
             </div>
             <div class="footer-description">
-                <p>Start planning your next getaway with <span class="span-station">TravelStation</span> today and embark on a journey that will leave you with memories to last a lifetime. </p>
+                <p>Start planning your next getaway with <span class="span-station">TravelStation</span> today and
+                    embark on a journey that will leave you with memories to last a lifetime. </p>
             </div>
 
             <div class="footer-icons">
